--- a/backend/package.json
+++ b/backend/package.json
@@ -24,5 +24,8 @@
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
     "validator": "^13.15.15"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
